Fixed first fragment to successfully display RecyclerView, added second fragment with Milestones listed in RecyclerView. Added back button on second page.

--- a/app/src/main/res/layout/fragment_milestones_list.xml
+++ b/app/src/main/res/layout/fragment_milestones_list.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".overview.AgesListFragment">
+    tools:context=".overview.MilestonesListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:padding="16dp" />
+        android:padding="16dp"
+        tools:listitem="@layout/linear_view_item" />
 
 </FrameLayout>
