--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,8 +7,8 @@
     <fragment
         android:id="@+id/agesListFragment"
         android:name="com.example.childdevelopment.overview.AgesListFragment"
-        android:label="fragment_ages_list"
-        tools:layout="@layout/fragment_ages_list" >
+        android:label="@string/age_list_fragment_label"
+        tools:layout="@layout/fragment_ages_list">
         <action
             android:id="@+id/action_agesListFragment_to_milestonesListFragment"
             app:destination="@id/milestonesListFragment" />
@@ -16,8 +16,8 @@
     <fragment
         android:id="@+id/milestonesListFragment"
         android:name="com.example.childdevelopment.overview.MilestonesListFragment"
-        android:label="fragment_milestones_list"
-        tools:layout="@layout/fragment_milestones_list" >
+        android:label="@string/milestone_list_fragment_label"
+        tools:layout="@layout/fragment_milestones_list">
         <argument
             android:name="age"
             app:argType="string" />
