--- a/app/src/main/res/layout/linear_view_item.xml
+++ b/app/src/main/res/layout/linear_view_item.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/button_item"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:padding="8dp" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="item"
+            type="String" />
+    </data>
+
+    <TextView
+        android:id="@+id/text_item"
+        android:text="@{item}"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:padding="8dp" />
+
+</layout>
