--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,9 +17,5 @@
         android:id="@+id/milestonesListFragment"
         android:name="com.example.childdevelopment.overview.MilestonesListFragment"
         android:label="@string/milestone_list_fragment_label"
-        tools:layout="@layout/fragment_milestones_list">
-        <argument
-            android:name="age"
-            app:argType="string" />
-    </fragment>
+        tools:layout="@layout/fragment_milestones_list"/>
 </navigation>
