--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,5 +17,13 @@
         android:id="@+id/milestonesListFragment"
         android:name="com.example.childdevelopment.overview.MilestonesListFragment"
         android:label="@string/milestone_list_fragment_label"
-        tools:layout="@layout/fragment_milestones_list"/>
+        tools:layout="@layout/fragment_milestones_list">
+        <action
+            android:id="@+id/action_milestonesListFragment_to_activitiesListFragment"
+            app:destination="@id/activitiesListFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/activitiesListFragment"
+        android:name="com.example.childdevelopment.overview.ActivitiesListFragment"
+        android:label="ActivitiesListFragment" />
 </navigation>
