--- a/app/src/main/res/layout/activities_view_item.xml
+++ b/app/src/main/res/layout/activities_view_item.xml
@@ -10,6 +10,7 @@
     <TextView
         android:id="@+id/text_item"
         android:text="@{item}"
+        android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
