--- a/app/src/main/res/layout/fragment_ages_list.xml
+++ b/app/src/main/res/layout/fragment_ages_list.xml
@@ -10,15 +10,15 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:context="com.example.childdevelopment.overview.AgesListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:agesData="@{viewModel.milestoneActivities}"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:agesData="@{viewModel.ages}"
             app:layoutManager=
                 "androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
