--- a/app/src/main/res/layout/milestones_view_item.xml
+++ b/app/src/main/res/layout/milestones_view_item.xml
@@ -4,52 +4,54 @@
     <data>
         <variable
             name="item"
-            type="com.example.childdevelopment.network.MilestonesOption" />
+            type="com.example.childdevelopment.database.Milestone" />
         <variable
             name="milestoneFragment"
             type="com.example.childdevelopment.overview.MilestonesListFragment" />
     </data>
 
-<LinearLayout
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/text_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_margin="4dp"
-        android:padding="2dp"
-        android:text="@{item.milestone}" />
-
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/see_activities_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:text="See activities"
-            android:onClick="@{ () -> milestoneFragment.showActivities(item)"/>
-
-
+        android:orientation="vertical">
         <TextView
-            android:id="@+id/textView"
-            style="@style/Widget.Milestone.TextView.MilestoneView"
+            android:id="@+id/text_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="18sp"
             android:layout_margin="4dp"
-            android:gravity="end"
             android:padding="2dp"
-            android:text="@{item.category}"
-            android:textSize="14sp" />
+            android:text="@{item.milestone}" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/see_activities_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:text="See activities"
+                android:onClick="@{() -> milestoneFragment.showActivities(item)}"/>
+
+
+            <TextView
+                android:id="@+id/textView"
+                style="@style/Widget.Milestone.TextView.MilestoneView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:gravity="end"
+                android:padding="2dp"
+                android:text="@{item.category}"
+                android:textSize="14sp" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
 
 </layout>
