Working copy with Milestones stored in Room after being pulled from server.

--- a/app/src/main/res/layout/fragment_activities_list.xml
+++ b/app/src/main/res/layout/fragment_activities_list.xml
@@ -18,14 +18,14 @@
             android:id="@+id/recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:activitiesData="@{viewModel.milestoneActivities}"
+
             app:layoutManager=
                 "androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
+        <!--app:activitiesData="@{viewModel.milestoneActivities}"-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
