--- a/app/src/main/res/layout/milestones_view_item.xml
+++ b/app/src/main/res/layout/milestones_view_item.xml
@@ -1,54 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-        <variable
-            name="item"
-            type="com.example.childdevelopment.database.Milestone" />
-        <variable
-            name="milestoneFragment"
-            type="com.example.childdevelopment.overview.MilestonesListFragment" />
-    </data>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="8dp">
 
-<RelativeLayout
+<com.google.android.material.card.MaterialCardView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <LinearLayout
+    android:layout_height="wrap_content"
+    >
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/text_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_margin="4dp"
-            android:padding="2dp" />
-
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/see_activities_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:text="See activities"/>
-
-
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/milestone_category"
-                style="@style/Widget.Milestone.TextView.MilestoneView"
+                android:id="@+id/text_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
                 android:layout_margin="4dp"
-                android:gravity="end"
-                android:padding="2dp"
-                android:textSize="14sp" />
+                android:padding="2dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/see_activities_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:text="@string/activities_button" />
+
+
+                <TextView
+                    android:id="@+id/milestone_category"
+                    style="@style/Widget.Milestone.TextView.MilestoneView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:gravity="end"
+                    android:padding="2dp"
+                    android:textSize="14sp" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</RelativeLayout>
+    </RelativeLayout>
+</com.google.android.material.card.MaterialCardView>
 
 </layout>
