--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,6 @@
 .btn-secondary:hover,
 .btn-secondary:focus {
   color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
 }
 
 
@@ -17,7 +16,6 @@
  */
 
 body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
@@ -70,3 +68,13 @@ body {
 	color: #FFAAA5
 }
 
+.select_button {
+	background-color: #69DDBC !important;
+	border: #9BB8FD !important;
+	color: #000000 !important;
+}
+
+.footer_buttons {
+	background-color: #FF7480 !important;
+	border: #FF7480 !important;
+}
