--- a/templates/about_the_developer.html
+++ b/templates/about_the_developer.html
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href=""><strong>About the Developer</strong></a>
@@ -136,12 +136,13 @@
 
         <div class="row d-flex justify-content-center">
           <div class="col-md-6">
-            <form>
+            <form action = "/contact_us" method = "POST" 
+				enctype = "multipart/form-data">
               <!-- Name -->
               <div class="row mb-4">
                 <div class="col">
                   <div class="form-outline">
-                    <input type="text" id="name" class="form-control" />
+                    <input type="text" id="contact_name" name="contact_name" class="form-control" />
                     <label class="form-label" for="name">Name</label>
                   </div>
                 </div>
@@ -149,19 +150,19 @@
 
               <!-- Email input -->
               <div class="form-outline mb-4">
-                <input type="email" id="email" class="form-control" />
+                <input type="email" id="contact_email" name="contact_email" class="form-control" />
                 <label class="form-label" for="email">Email address</label>
               </div>
 			  
 			  <!-- Message -->
 			  <div class="form-outline mb-4">
-			    <textarea class="form-control" aria-label="With textarea"></textarea>
+			    <textarea type="text" class="form-control" aria-label="With textarea" id="contact_message" name="contact_message"></textarea>
 				<label class="form-label" for="textarea">Message</label>
 			  </div>
 
               <!-- Submit button -->
-              <button type="submit" class="btn btn-primary btn-block mb-4">
-                Send
+              <button type="submit" class="btn btn-primary btn-block mb-4 select_button">
+                <strong>Send</strong>
               </button>
             </form>
           </div>
@@ -177,11 +178,11 @@
 
     <div class="text-center py-4 align-items-center">
       <p>Follow Head & Heart on social media</p>
-      <a href="https://www.instagram.com/headandheartco/" class="btn btn-primary m-1" role="button" rel="nofollow"
+      <a href="https://www.instagram.com/headandheartco/" class="btn all_buttons btn-primary m-1 footer_buttons" role="button" rel="nofollow"
         target="_blank">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://github.com/JoelRJ" class="btn btn-primary m-1" role="button" rel="nofollow"
+      <a href="https://github.com/JoelRJ" class="btn btn-primary m-1 footer_buttons" role="button" rel="nofollow"
         target="_blank">
         <i class="fab fa-github"></i>
       </a>
@@ -195,9 +196,5 @@
     <!-- Copyright -->
   </footer>
   <!--Footer-->
-		    <!-- MDB -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
-    <!-- Custom scripts -->
-    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>		
