--- a/app/src/main/res/layout/fragment_milestones_list.xml
+++ b/app/src/main/res/layout/fragment_milestones_list.xml
@@ -6,7 +6,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:context="com.example.childdevelopment.overview.MilestonesListFragment">
+        tools:context="com.example.childdevelopment.overview.MilestonesListFragment"
+        android:background="@color/background_grey">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
