--- a/app/src/main/res/layout/ages_view_item.xml
+++ b/app/src/main/res/layout/ages_view_item.xml
@@ -13,17 +13,31 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/text_item"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:layout_margin="10dp"
-            android:gravity="top"
-            android:onClick="@{() -> ageFragment.goToNextScreen(item.ageRange)}"
-            android:text="@{item.ageRange}"
-            android:textSize="20sp" />
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:onClick="@{() -> ageFragment.goToNextScreen(item.ageRange)}">
+
+            <ImageView
+                android:id="@+id/image_view"
+                android:layout_width="59dp"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/image_description"
+                android:importantForAccessibility="no"/>
+
+            <TextView
+                android:id="@+id/text_item"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:gravity="top"
+                android:padding="6dp"
+                android:text="@{item.ageRange}"
+                android:textSize="24sp"
+                android:minHeight="48dp"/>
+        </LinearLayout>
 
     </RelativeLayout>
 </layout>
