--- a/app/src/main/res/layout/milestones_view_item.xml
+++ b/app/src/main/res/layout/milestones_view_item.xml
@@ -21,8 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:layout_margin="4dp"
-                android:padding="2dp" />
+                android:layout_margin="4dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -45,8 +44,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
                     android:gravity="end"
-                    android:padding="2dp"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
