Began implementation of multiple nav_graphs for the bottom_navigation_menu

--- a/app/src/main/res/navigation/nav_graph_home.xml
+++ b/app/src/main/res/navigation/nav_graph_home.xml
@@ -29,4 +29,7 @@
         android:id="@+id/activitiesListFragment"
         android:name="com.example.childdevelopment.overview.ActivitiesListFragment"
         android:label="@string/activities_list_fragment_label" />
+    <fragment android:id="@+id/childrenProfilesFragment"
+        android:name="com.example.childdevelopment.overview.ChildrenProfilesFragment"
+        android:label="@string/children_profiles_fragment_label"/>
 </navigation>
