--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="light_blue">#e9ffff</color>
     <color name="dark_blue">#859bcb</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#51000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background_grey">#E9E9E9</color>
 </resources>
+
