--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@
  */
 
 body {
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  background-color: #F5F5F5 !important;
 }
 
 .cover-container {
@@ -43,11 +43,6 @@ body {
 
 .nav-masthead .nav-link + .nav-link {
   margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
 }
 
 #logo {
@@ -78,3 +73,14 @@ body {
 	background-color: #FF7480 !important;
 	border: #FF7480 !important;
 }
+
+[aria-current] {
+	font-weight: bold;
+}
+
+@media (min-width: 850px) and (max-width: 850px) {
+            .navbar:not(.top-nav-collapse) {
+                background: #1C2331!important;
+            }
+        }
+.view,body,html{height:100%}.navbar{background-color:rgba(0,0,0,.3)}.page-footer,.top-nav-collapse{background-color:#1C2331}@media only screen and (max-width:1000px){.navbar{background-color:#1C2331}}
