--- a/templates/about_the_developer.html
+++ b/templates/about_the_developer.html
@@ -20,7 +20,7 @@
     <style>
       #intro {
         background-image: url("../static/img/hands.jpg");
-        height: 10vh;
+        height: 15vh;
 		background-size: cover;
       }
 
@@ -37,26 +37,34 @@
     </style>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
       <div class="container-fluid">
         <!-- Navbar brand -->
         <a class="navbar-brand">
-          <strong class="green_text">Head & Heart</strong>
-        </a>
-        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
-          aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
+        <button 
+			class="navbar-toggler" 
+			type="button" 
+			data-mdb-toggle="collapse" 
+			data-mdb-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" 
+			aria-expanded="false" 
+			aria-label="Toggle navigation"
+			>
           <i class="fas fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarExample01">
+          <strong class="green_text">Head & Heart</strong>
+        </a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href=""><strong>About the Developer</strong></a>
+              <a class="nav-link" aria-current="page" href="about_me">About the Developer</a>
             </li>
           </ul>
-
+		</div>
+		<div class="d-flex align-items-center">
           <ul class="navbar-nav d-flex flex-row">
             <!-- Icons -->
             <li class="nav-item me-3 me-lg-0">
@@ -196,5 +204,7 @@
     <!-- Copyright -->
   </footer>
   <!--Footer-->
+  <script  type="text/javascript"  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 </html>		
